--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,2 +1,23 @@
-img
-	width 25%
+*
+	padding 0
+	margin 0
+	outline none
+	text-decoration none
+cyan = #40f3f7
+.navbar
+	box-shadow: none;
+	border: 0;
+	border-radius: 0;
+	background: #00000082;
+	margin: 25px 0 0;
+	position: absolute;
+	z-index: 2;
+header
+	background url("/img/head_bg.jpg") no-repeat
+	background-size cover
+	padding: 120px 0
+	h1
+		text-align center
+		color #FFF
+	h2
+		color cyan
