--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -4,6 +4,14 @@
 	outline none
 	text-decoration none
 cyan = #40f3f7
+img
+	width 100%
+body
+	background: url(/img/head_bg.jpg) fixed center 0px
+	background-size: 120% 120%
+	transition: all 2s ease-out
+	background-repeat: no-repeat
+	
 .navbar
 	box-shadow: none;
 	border: 0;
@@ -12,12 +20,80 @@ cyan = #40f3f7
 	margin: 25px 0 0;
 	position: absolute;
 	z-index: 2;
+	width: 100%;
 header
-	background url("/img/head_bg.jpg") no-repeat
-	background-size cover
 	padding: 120px 0
 	h1
 		text-align center
 		color #FFF
 	h2
 		color cyan
+	.headDescription
+		
+		&_item
+			&:first-child
+				color #fff
+				text-align right
+			&:nth-child(2)
+				background #40f3f7c4
+			ul
+				list-style none
+.separator
+	display: flex
+	justify-content: space-between
+	align-items: center
+	margin: 25px 0 40px
+	span
+		width: 10px
+		height: 10px
+		background: #40f3f7
+		border-radius: 50%
+		margin: 0 15px
+	&:before
+	&:after
+		content ''
+		display block
+		height 1px
+		width 49%
+		background #ffffff94 
+section
+	h3
+		text-align center
+		color #fff
+.ourAdvertisers
+	background: #fff url(/img/moon.png) no-repeat 0px
+	background-size: 85%
+	padding: 40px 0 180px
+	position relative
+	overflow hidden
+	transition: all 2s ease
+	h3
+		color #6d6d6d
+	&_shabow
+		position: absolute
+		height: 141px
+		bottom: 0
+		width: 146%
+		left: -50%
+		transform: translate(25%, 0%)
+		box-shadow: inset 0 -32px 60px 0px #000000a3
+	.separator
+		&:before
+		&:after
+			content ''
+			background #00000094 
+.casesNews
+	color #fff
+	padding 40px 0
+
+.subscrabeBox
+	background cyan
+	padding 20px
+	margin 10px 0 20px 
+
+footer
+	padding 20px 0
+	color #fff
+			
+				
+		
