--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,5 +1,50 @@
+
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<a href="#">
+					<img src="img/3s_logo.png" alt="">
+				</a>
+			</div>
+			<div class="col-md-3">
+				<h5>Меню</h5>
+				<ul>
+					<li><a href="#">Кто мы</a></li>
+					<li><a href="">Рекламодатели</a></li>
+					<li><a href="">Блог</a></li>
+					<li><a href="">Вакансии</a></li>
+					<li><a href="">Контакты</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<h5>Контакты</h5>
+				<div class="c-item">
+					<div>Для рекламодателей</div>
+					<p>info@3snet.ru</p>
+				</div>
+				<div class="c-item">
+					<div>Для партнёров</div>
+					<p>support@3snet.ru</p>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<h5>Мы в соцсетях</h5>
+				<div class="row">
+					<div class="col-4"><a href="#"><img src="" alt=""></a></div>
+					<div class="col-4"><a href="#"><img src="" alt=""></a></div>
+					<div class="col-4"><a href="#"><img src="" alt=""></a></div>
+					<div class="col-4"><a href="#"><img src="" alt=""></a></div>
+					<div class="col-4"><a href="#"><img src="" alt=""></a></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
