--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -182,7 +182,7 @@ section
 		input
 			height: 50px
 			width: 100%
-			border: 1px solid #333
+			border: 1px solid #a7a7a7
 			border-radius: 12px
 			padding: 0 110px 0 45px
 			margin-right: 10px
