--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -2,12 +2,14 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<a href="#">
+			<div class="col-md-2">
+				<a href="#" class="f-logo">
 					<img src="img/3s_logo.png" alt="">
 				</a>
+				<span class="copy">3SNET LIMITED © 2016-2018г.</span>
+				<span class="copy">Все права защищены</span>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-md-offset-1">
 				<h5>Меню</h5>
 				<ul>
 					<li><a href="#">Кто мы</a></li>
