--- a/src/template/head.html
+++ b/src/template/head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Frontend Devil</title>
+    <title>3sNet</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -14,32 +14,41 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<div class="loaderAreaWrapper">
+		<div class='loader loader3'>
+		<div><div><div><div><div><div></div></div></div></div></div></div>
+		</div>
+	</div>
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#">
-						<img src="img/3s_logo.png" alt="">
-					</a>
-				</div>
+				<div class="navbarWrapper">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#">
+							<img src="img/3s_logo.png" alt="">
+						</a>
+					</div>
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Dropdown</a></li>
-					</ul>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Dropdown</a></li>
-					</ul>
+						<ul class="nav navbar-nav navbarMenu">
+							<li class="active"><a href="#">Кто мы</a></li>
+							<li><a href="#">Рекламодатели</a></li>
+							<li><a href="#">Блог</a></li>
+							<li><a href="#">Вакансии</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="#">Rus / En</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div><!-- /.container-fluid -->
