--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -470,7 +470,26 @@ div:hover {
 					background: #ffffff
 			span
 				background cyan
-
+// ========================   CONTACTS    ================================= //
+.contactForm
+	input
+	select
+	textarea
+		width 100%
+		margin-bottom 30px
+		border none
+		background #0f6169cc
+		padding 10px
+		color #fff
+		font-size 15px
+		font-weight 600 	
+	input
+	select
+		height 50px
+		line-height 50px
+	textarea
+		height 250px
+// ======================================================================== //
 @media screen and (max-width: 991px)
 	header
 		.headDescription_item
