--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -6,6 +6,7 @@
 
 
 cyan = #40f3f7
+dcyan = #018795
 gr = #fff
 bl = rgba(0, 0, 255, .5)
 
@@ -471,6 +472,44 @@ div:hover {
 					background: #ffffff
 			span
 				background cyan
+// ========================     BLOG    ================================= //
+.blog
+	&Content
+		background #fff
+		padding 60px 0
+	&Item
+		clear both
+		margin-bottom 50px
+		overflow: hidden
+		.categoryLnk
+			display inline-block
+			text-decoration none
+			&:before
+				content "#"
+				display inline-block
+				margin-right 5px
+		h3
+			color #000
+			margin-top 10px
+		.btn.showMore
+			float right
+			background #fff
+			color #000
+			border: 2px solid #000
+			&:hover
+				background dcyan
+				color #fff
+				border-color dcyan
+	&Sidebar
+		.tagcloud
+			background dcyan
+			padding 20px 15px
+			font-weight 100 
+			a
+				color #fff
+				text-decoration none
+	.subscrabeBox 
+		margin-top 0
 // ========================   CONTACTS    ================================= //
 .contactForm
 	input
