--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -48,6 +48,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.formstyler.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
