--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -474,6 +474,22 @@ div:hover {
 				background cyan
 // ========================     BLOG    ================================= //
 .blog
+	&Navigation
+		ul
+			display flex
+			justify-content: center
+			align-items: center
+			margin-bottom 20px
+			li
+				margin 0 20px
+				font-size 18px
+				a
+					color white
+					&.active
+						color cyan
+					&:hover
+						color cyan
+						text-decoration underline
 	&Content
 		background #fff
 		padding 60px 0
@@ -515,6 +531,7 @@ div:hover {
 	input
 	select
 	textarea
+	.jq-selectbox__select
 		width 100%
 		margin-bottom 30px
 		border none
@@ -522,18 +539,64 @@ div:hover {
 		padding 10px
 		color #fff
 		font-size 15px
-		font-weight 600 	
+		font-weight 600
+		&::placeholder
+			color cyan	
 	input
 	select
+	.jq-selectbox__select
 		height 50px
 		line-height 50px
 	textarea
 		height 250px
+	.jq-selectbox
+		&__select
+			padding 0
+			border: none
+			box-shadow: none
+			border-radius: 0
+			outline none
+			&-text
+				width calc(100% - 34px)!important;
+				padding 10px
+				height: 100%;
+				line-height: 30px;
+				padding-left: 50px
+				color cyan
+				text-shadow none
+		&__dropdown
+			background #0f6169cc
+			border-radius 0
+			color cyan
+			background #0f6169cc
+			top: 48px !important
+			border: none
+			border-bottom: 2px solid #40f3f7
+		&.focused
+			.jq-selectbox__select
+				border none
 	.btn.yellowGrd
 		font-size: 20px;
 		text-transform: uppercase;
 		padding: 15px 40px;
-		margin-top: 40px;
+		margin-top: 40px
+	.input
+		&Wrapper
+			position relative
+			input
+			textarea
+				padding-left 50px
+		&Ico
+			position absolute
+			width auto
+			top 14px
+			left 12px
+			z-index 22
+	.capchaWrapper
+		width 100px
+	.mustHaveTxt
+		color #fff
+		margin 6px 20px
 .contacts
 	header
 		background: url("../img/sunset.png") no-repeat
