--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -21,8 +21,8 @@ img
 a.btn
 button.btn
 	&.yellowGrd
-		border: 2px solid #ffcc00;
-		background: rgba(255,226,5,1);
+		border: 2px solid #ffcc00
+		background: rgba(255,226,5,1)
 		background: linear-gradient(to bottom, rgba(255,226,5,1) 63%, rgba(255,118,5,1) 100%)
 		color: #000000
 		font-size: 14px
@@ -51,13 +51,13 @@ body
 	font-family: 'Fira Sans', sans-serif
 	
 .navbar
-	box-shadow: none;
-	border: 0;
-	border-radius: 0;
-	background: #00000082;
-	margin: 0px 0 0;
-	position: absolute;
-	z-index: 2;
+	box-shadow: none
+	border: 0
+	border-radius: 0
+	background: #00000082
+	margin: 0px 0 0
+	position: absolute
+	z-index: 2
 	width: 100%
 	padding 20px 0
 	.navbar-nav
@@ -81,17 +81,17 @@ body
 				&:after
 					content ''
 					display block
-					height: 1px;
-					width: 0%;
+					height: 1px
+					width: 0%
 					transition all .3s
-					background: #40f3f7;
+					background: #40f3f7
 				&:hover
 				&:focus
 					outline none
 					color cyan
 				&:hover
 					&:after
-						width: 100%;
+						width: 100%
 			&:not(:last-child)
 				a
 					border-right 1px solid cyan
@@ -110,19 +110,19 @@ body
 		margin-top 0
 		li
 			a
-				border: none !important;
-				width: 50px;
-				height: 50px;
-				padding: 0;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				border-radius: 50%;
-				transition: all .5s;
+				border: none !important
+				width: 50px
+				height: 50px
+				padding: 0
+				display: flex
+				justify-content: center
+				align-items: center
+				border-radius: 50%
+				transition: all .5s
 				&.active
-					color: #35bfc4;
-					background: #fff;
-					background: #fff!important;
+					color: #35bfc4
+					background: #fff
+					background: #fff!important
 				&:after
 					width 0!important
 header
@@ -188,11 +188,11 @@ header
 					transform: translate(-50%, -50%)
 					box-shadow: 3px 8px 20px #0000008a
 			.btn
-				font-size: 18px;
-				text-decoration: none;
-				min-width: 200px;
-				padding: 10px 30px;
-				display: inline-block;
+				font-size: 18px
+				text-decoration: none
+				min-width: 200px
+				padding: 10px 30px
+				display: inline-block
 .separator
 	display: flex
 	justify-content: center
@@ -218,7 +218,7 @@ section
 		color #fff
 .ourAdvertisers
 	background: #fff url("../img/moon.png") no-repeat
-	background-position: 50% 130%;
+	background-position: 50% 130%
 	background-size: 85%
 	padding: 40px 0 180px
 	position relative
@@ -242,10 +242,10 @@ section
 	.partners-list
 		text-align center
 		span
-			display: inline-block;
-			margin: 10px;
-			width: 100px;
-			height: 100px;
+			display: inline-block
+			margin: 10px
+			width: 100px
+			height: 100px
 			img 
 				max-width: 100px
 				max-height: 100px
@@ -279,7 +279,7 @@ section
 	margin 10px 0 20px
 	&Wrapper
 		display flex
-		align-items: center;
+		align-items: center
 	p
 		font-size: 18px
 		max-width: 400px
@@ -301,17 +301,17 @@ section
 .inputWrapper
 	position relative
 	&_icon
-		position: absolute;
-		top: 53%;
-		font-size: 22px;
-		left: 10px;
-		transform: translate(0, -50%);
+		position: absolute
+		top: 53%
+		font-size: 22px
+		left: 10px
+		transform: translate(0, -50%)
 		color: #a7a7a7
 	button.btn
-		position: absolute;
-		right: 20px;
-		top: 50%;
-		transform: translate(0, -50%);
+		position: absolute
+		right: 20px
+		top: 50%
+		transform: translate(0, -50%)
 		color #fff
 		&:hover
 			box-shadow none!important
@@ -344,8 +344,8 @@ footer
 			width: 36px
 			height: 36px
 			transition all .3s
-			float: left;
-			margin-right: 10px;
+			float: left
+			margin-right: 10px
 			&:hover
 				background #fff
 
@@ -362,61 +362,61 @@ footer
 
 @keyframes rotate{
 	0% {
-		transform: rotate(0deg);
+		transform: rotate(0deg)
 	}
 	50% {
-		transform: rotate(180deg);
+		transform: rotate(180deg)
 	}
 	100% {
-		transform: rotate(360deg);
+		transform: rotate(360deg)
 	}
 }
 
 @keyframes rotate2 {
 	0% {
-		transform: rotate(0deg);
-		border-top-color:gr;
+		transform: rotate(0deg)
+		border-top-color:gr
 	}
 	50% {
-		transform: rotate(180deg);
-		border-top-color: blue;
+		transform: rotate(180deg)
+		border-top-color: blue
 	}
 	100% {
-		transform: rotate(360deg);
-		border-top-color:gr;
+		transform: rotate(360deg)
+		border-top-color:gr
 	}
 }
 
 * {
-	box-sizing: border-box;
+	box-sizing: border-box
 }
 
 loaderDivMixin()
-	border-radius: 50%;
-	padding: 8px;
-	border: 2px solid transparent;
-	animation: rotate linear 3.5s infinite;
+	border-radius: 50%
+	padding: 8px
+	border: 2px solid transparent
+	animation: rotate linear 3.5s infinite
 
 .loader {
-	position: fixed;
-	margin: 0;
-	width: 150px;
-	height: 150px;
-	display: block;
-	overflow: hidden;
-	top: 50%;
-	left: 50%;
-	margin-top: -75px;
-	margin-left: -75px;
+	position: fixed
+	margin: 0
+	width: 150px
+	height: 150px
+	display: block
+	overflow: hidden
+	top: 50%
+	left: 50%
+	margin-top: -75px
+	margin-left: -75px
 	div {
-		height: 100%;
+		height: 100%
 	}
 }
 
 /* loader 1 */
 .loader1, .loader1 div {
 	loaderDivMixin()
-	border-top-color: gr;
+	border-top-color: gr
 	border-bottom-color: cyan
 }
 
@@ -424,33 +424,33 @@ loaderDivMixin()
 .loader2, .loader2 div {
 	loaderDivMixin()
 	border-top-color: cyan
-	border-left-color: gr;
-	border-right-color: gr;
+	border-left-color: gr
+	border-right-color: gr
 }
 
 /*loader 3  */
 .loader3, .loader3 div {
 	loaderDivMixin()
-	border-top-color: gr;
+	border-top-color: gr
 	border-left-color: cyan
-	animation-timing-function: cubic-bezier(.55, .38, .21, .88);
-	animation-duration: 3s;
+	animation-timing-function: cubic-bezier(.55, .38, .21, .88)
+	animation-duration: 3s
 }
 
 /* loader 4 */
 .loader4, .loader4 div {
 	loaderDivMixin()
-	border-radius: 50%;
-	padding: 4px;
-	animation: rotate2 4s infinite linear;
+	border-radius: 50%
+	padding: 4px
+	animation: rotate2 4s infinite linear
 }
 
 div:hover {
-	animation-play-state: paused;
+	animation-play-state: paused
 }
 
 .loader, .loader * {
-	will-change: transform;
+	will-change: transform
 }
 
 .owl-carousel
@@ -541,26 +541,30 @@ div:hover {
 		font-size 15px
 		font-weight 600
 		&::placeholder
-			color cyan	
+			color cyan
+			font-weight 400
 	input
 	select
 	.jq-selectbox__select
 		height 50px
+		font-weight 400
 		line-height 50px
 	textarea
 		height 250px
 	.jq-selectbox
+		width 100%
 		&__select
 			padding 0
 			border: none
 			box-shadow: none
 			border-radius: 0
 			outline none
+			transition all .3s
 			&-text
-				width calc(100% - 34px)!important;
+				width calc(100% - 34px)!important
 				padding 10px
-				height: 100%;
-				line-height: 30px;
+				height: 100%
+				line-height: 30px
 				padding-left: 50px
 				color cyan
 				text-shadow none
@@ -572,13 +576,31 @@ div:hover {
 			top: 48px !important
 			border: none
 			border-bottom: 2px solid #40f3f7
+			li
+				color #fff
+				transition all .3s
+				&.selected
+				&:hover
+					background-color: #13434d
+					color: #FFF
+		&__trigger
+			border none
+			&-arrow
+				top: 22px
+				right: 20px
+				border-top: 7px solid #40f3f7!important
+				border-right: 7px solid transparent
+				border-left: 7px solid transparent
 		&.focused
 			.jq-selectbox__select
 				border none
+		&.opened
+			.jq-selectbox__select
+				background: rgb(13, 81, 89)
 	.btn.yellowGrd
-		font-size: 20px;
-		text-transform: uppercase;
-		padding: 15px 40px;
+		font-size: 20px
+		text-transform: uppercase
+		padding: 15px 40px
 		margin-top: 40px
 	.input
 		&Wrapper
@@ -591,7 +613,33 @@ div:hover {
 			width auto
 			top 14px
 			left 12px
+			z-index 8
+	.selectboxWrapper
+		.inputIco
 			z-index 22
+	.phoneWrapper
+		&.inputWrapper
+			display flex
+			justify-content: space-between
+			.inputPhoneIcoWrapper
+				display: flex
+				align-items: center
+				margin-right: 5px
+				justify-content: center
+				height: 50px
+				width: 90px
+				text-align: center
+				background: rgba(15,97,105,0.8)
+				.inputIco
+					position static
+			.inputPhoneCodeWrapper
+				margin-right 5px
+				width 90px
+				input
+					padding-left 10px
+					text-align center
+			input
+				padding-left 20px
 	.capchaWrapper
 		width 100px
 	.mustHaveTxt
@@ -600,7 +648,7 @@ div:hover {
 .contacts
 	header
 		background: url("../img/sunset.png") no-repeat
-		background-position: 50% 100%;
+		background-position: 50% 100%
 		background-size: 100%
 		position relative
 		padding-bottom 100px
@@ -622,6 +670,19 @@ div:hover {
 			left: 20%
 			font-size: 18px
 			transform: translate(0, -50%)
+// =============================== SCROLL ================================= //
+.jspVerticalBar
+	top: 0;
+	right: 1px;
+	width: 16px;
+	padding: 0 3px;
+	height: 100%;
+	background: #13434d
+.jspTrack
+	background: #13434d
+.jspDrag
+	background: #40f3f7
+	border-radius: 7px
 // ======================================================================== //
 @media screen and (max-width: 991px)
 	header
@@ -678,23 +739,23 @@ div:hover {
 		.headDescription
 			&_item
 				&:nth-child(2)
-					text-align: center;
-					width: 100%;
-					clear: both;
+					text-align: center
+					width: 100%
+					clear: both
 					padding-top 50px
 					padding-bottom 30px
 				&:first-child
-					color: #fff;
-					text-align: center;
-					padding-bottom: 50px;
-					overflow: hidden;
+					color: #fff
+					text-align: center
+					padding-bottom: 50px
+					overflow: hidden
 			&_itemWrapper 
 				.vsBox
-					width: 120px;
-					height: 120px;
-					padding: 30px;
-					top: 0%;
-					left: 50%;
+					width: 120px
+					height: 120px
+					padding: 30px
+					top: 0%
+					left: 50%
 					transform: translate(-50%, -100%)
 	.ourAdvertisers
 		background: #fff url(../img/moon.png) no-repeat
