--- a/src/template/head.html
+++ b/src/template/head.html
@@ -12,7 +12,9 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+	<link rel="stylesheet" href="css/jquery.jscrollpane.css">
 	
+
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
